--- a/Frontend/public/regole_scadenze.html
+++ b/Frontend/public/regole_scadenze.html
@@ -18,8 +18,9 @@
     <link rel="stylesheet" href="assets/css/auth_impostazioni.css">
 
     <!-- Core Engine -->
-    <script src="assets/js/titanium-config.js"></script>
-    <script src="assets/js/titanium-core.js"></script>
+    <script src="assets/js/titanium-config.js?v=3.5"></script>
+    <script src="assets/js/titanium-core.js?v=3.5"></script>
+    <script src="assets/js/ui-core.js?v=3.5"></script>
 </head>
 
 <body class="antialiased">
@@ -29,17 +30,24 @@
 
         <!-- HEADER FISSO -->
         <header class="titanium-header">
-            <div id="header-content" class="header-stack">
-                <h2 class="header-title"
-                    style="white-space: normal; line-height: 1.1; text-align: center; max-width: 60%; margin: 0 auto;"
-                    data-t="expiry_rules_title_page">Regole Scadenze</h2>
-                <div style="position: absolute; left: 0; display: flex; gap: 0.5rem;">
-                    <a href="impostazioni.html" class="btn-icon-header" style="position: relative; right: auto;">
+            <div class="header-balanced-container">
+                <!-- ZONA SINISTRA: Navigazione (1 icona) -->
+                <div class="header-left">
+                    <a href="impostazioni.html" class="btn-icon-header">
                         <span class="material-symbols-outlined">arrow_back</span>
                     </a>
                 </div>
-                <div style="position: absolute; right: 0; display: flex; gap: 0.5rem;">
-                    <a href="home_page.html" class="btn-icon-header" style="position: relative;">
+
+                <!-- ZONA CENTRO: Titolo con Wrap Intelligente -->
+                <div class="header-center">
+                    <h2 class="header-title" data-t="expiry_rules_title_page">
+                        Regole Scadenze
+                    </h2>
+                </div>
+
+                <!-- ZONA DESTRA: Home (1 icona) -->
+                <div class="header-right">
+                    <a href="home_page.html" class="btn-icon-header">
                         <span class="material-symbols-outlined">home</span>
                     </a>
                 </div>
@@ -102,6 +110,17 @@
             </div>
 
         </main>
+
+        <!-- FOOTER PREMIUM -->
+        <footer class="titanium-footer">
+            <div style="opacity: 0.3; text-align: center;">
+                <span
+                    style="font-size: 8px; font-weight: 800; letter-spacing: 0.3em; color: white; text-transform: uppercase;">
+                    Titanium Security Protocol V3.5
+                </span>
+            </div>
+        </footer>
+
     </div>
 
     <!-- Script di traduzione rapido -->
