--- a/Frontend/public/aggiungi_account_azienda.html
+++ b/Frontend/public/aggiungi_account_azienda.html
@@ -99,7 +99,10 @@
                     Nuovo Account Azienda
                 </h2>
                 <!-- Spacer to balance back button -->
-                <div class="w-10"></div>
+                <a href="home_page.html"
+                    class="flex items-center justify-center w-10 h-10 rounded-xl hover:bg-white/5 text-gray-400 hover:text-white transition-colors">
+                    <span class="material-symbols-outlined text-[24px]">home</span>
+                </a>
             </div>
         </header>
 
