--- a/Frontend/public/aggiungi_nuova_azienda.html
+++ b/Frontend/public/aggiungi_nuova_azienda.html
@@ -103,9 +103,13 @@
                     class="flex items-center justify-center w-10 h-10 rounded-xl hover:bg-white/5 text-gray-400 hover:text-white transition-colors">
                     <span class="material-symbols-outlined text-[24px]">arrow_back</span>
                 </a>
-                <h2 class="text-white text-lg font-bold tracking-tight text-center flex-1 pr-10">
+                <h2 class="text-white text-lg font-bold tracking-tight text-center flex-1">
                     Nuova Azienda
                 </h2>
+                <a href="home_page.html"
+                    class="flex items-center justify-center w-10 h-10 rounded-xl hover:bg-white/5 text-gray-400 hover:text-white transition-colors">
+                    <span class="material-symbols-outlined text-[24px]">home</span>
+                </a>
             </div>
         </header>
 
