--- a/Frontend/public/modifica_azienda.html
+++ b/Frontend/public/modifica_azienda.html
@@ -99,16 +99,25 @@
 
         <!-- Header -->
         <header class="fixed top-0 left-0 right-0 md:max-w-3xl lg:max-w-5xl mx-auto glass-header z-50 px-4 py-3">
-            <div class="flex items-center justify-between w-full h-10 gap-4">
-                <button id="btn-back" onclick="history.back()"
-                    class="flex items-center justify-center w-10 h-10 rounded-xl hover:bg-white/5 text-gray-400 hover:text-white transition-colors">
-                    <span class="material-symbols-outlined text-[24px]">arrow_back</span>
-                </button>
-                <h2 class="text-white text-lg font-bold tracking-tight text-center flex-1">
+            <div class="flex items-center justify-between w-full h-10 relative">
+                <div class="z-10">
+                    <button id="btn-back" onclick="history.back()"
+                        class="flex items-center justify-center w-10 h-10 rounded-xl hover:bg-white/5 text-gray-400 hover:text-white transition-colors">
+                        <span class="material-symbols-outlined text-[24px]">arrow_back</span>
+                    </button>
+                </div>
+
+                <h2
+                    class="text-white text-lg font-bold tracking-tight text-center absolute inset-0 flex items-center justify-center pointer-events-none">
                     Modifica Azienda
                 </h2>
-                <!-- Spacer to balance back button -->
-                <div class="w-10"></div>
+
+                <div class="z-10">
+                    <a href="home_page.html"
+                        class="flex items-center justify-center w-10 h-10 rounded-xl hover:bg-white/5 text-gray-400 hover:text-white transition-colors">
+                        <span class="material-symbols-outlined text-[24px]">home</span>
+                    </a>
+                </div>
             </div>
         </header>
 
