--- a/Frontend/public/scadenze.html
+++ b/Frontend/public/scadenze.html
@@ -1,190 +1,237 @@
-<html class="dark" lang="it">
+<!DOCTYPE html>
+<html lang="it">
 
 <head>
     <meta charset="utf-8" />
-    <!-- Instant Theme Loader (Must be in HEAD) -->
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta name="color-scheme" content="dark only">
-    <meta name="theme-color" content="#0a0f1e">
-    <title>Scadenze</title>
-    <!-- PWA / Mobile Capable -->
-    <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" sizes="192x192" href="/assets/images/app-icon.png?v=2">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="App Codici">
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;display=swap"
-        rel="stylesheet" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
-        rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Scadenze - Titanium Account</title>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <!-- Design System Master -->
+    <link rel="stylesheet" href="assets/css/auth_impostazioni.css">
+
+    <!-- CSS specifico per la lista scadenze -->
     <style>
-        body {
-            background-color: #0a0f1e;
-            min-height: 100vh;
-        }
-
-        .material-symbols-outlined {
-            font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
-        }
-
         .filled {
             font-variation-settings: 'FILL' 1;
         }
 
-        /* PUNTO LUCE A FARO (Standard Metodo A) */
-        .glass-glow {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 150%;
-            height: 120%;
-            background: radial-gradient(circle at 50% 0%,
-                    rgba(80, 150, 255, 0.6) 0%,
-                    rgba(80, 150, 255, 0) 60%);
-            filter: blur(80px);
-            opacity: 1;
-            pointer-events: none;
-            z-index: 0;
-            animation: glowFloat 5s ease-in-out infinite;
+        /* Filter Chips Titanium Style */
+        .filter-container {
+            display: flex;
+            gap: 0.5rem;
+            padding: 1rem;
+            overflow-x: auto;
+            scrollbar-width: none;
         }
 
-        @keyframes glowFloat {
-            0% {
-                transform: translateX(-50%) translateY(-150px) scale(1);
-                opacity: 0.5;
-            }
-
-            50% {
-                transform: translateX(-50%) translateY(100px) scale(1.4);
-                opacity: 1;
-            }
-
-            100% {
-                transform: translateX(-50%) translateY(-150px) scale(1);
-                opacity: 0.5;
-            }
-        }
-
-        /* Hide scrollbar */
-        .no-scrollbar::-webkit-scrollbar {
+        .filter-container::-webkit-scrollbar {
             display: none;
         }
 
-        .no-scrollbar {
-            -ms-overflow-style: none;
-            scrollbar-width: none;
+        .filter-chip {
+            padding: 0.5rem 1rem;
+            border-radius: 12px;
+            background: var(--surface-sub);
+            border: 1px solid var(--border-color);
+            color: var(--text-secondary);
+            font-size: 0.7rem;
+            font-weight: 800;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            white-space: nowrap;
+            transition: all 0.3s ease;
+            cursor: pointer;
+        }
+
+        .filter-chip.active {
+            background: var(--accent-blue);
+            color: white;
+            border-color: var(--accent-blue);
+            box-shadow: 0 4px 15px rgba(59, 130, 246, 0.3);
+        }
+
+        /* Search Bar Animated */
+        #search-bar-container {
+            position: fixed;
+            top: 70px;
+            /* Sotto l'header */
+            left: 0;
+            right: 0;
+            z-index: 90;
+            padding: 0.75rem 1rem;
+            background: var(--surface-card);
+            backdrop-filter: blur(10px);
+            border-bottom: 1px solid var(--border-color);
+            transform: translateY(-150%);
+            transition: transform 0.4s cubic-bezier(0.16, 1, 0.3, 1), opacity 0.4s;
+            opacity: 0;
+            max-width: 768px;
+            margin: 0 auto;
+        }
+
+        #search-bar-container.active {
+            transform: translateY(0);
+            opacity: 1;
+        }
+
+        .search-input-wrapper {
+            position: relative;
+            display: flex;
+            align-items: center;
+        }
+
+        .search-input-wrapper input {
+            width: 100%;
+            background: var(--surface-sub);
+            border: 1px solid var(--border-color);
+            border-radius: 12px;
+            padding: 0.75rem 1rem 0.75rem 2.5rem;
+            color: var(--text-primary);
+            font-size: 0.9rem;
+            outline: none;
+        }
+
+        .search-input-wrapper .material-symbols-outlined {
+            position: absolute;
+            left: 0.75rem;
+            color: var(--text-secondary);
+            font-size: 1.2rem;
         }
     </style>
+
+    <!-- Core Engine -->
+    <script src="assets/js/titanium-config.js?v=3.5"></script>
+    <script src="assets/js/titanium-core.js?v=3.5"></script>
+    <script src="assets/js/ui-core.js?v=3.5"></script>
 </head>
 
-<body class="bg-[#0a0f1e] text-white font-display antialiased overflow-x-hidden">
-    <div
-        class="relative flex h-full min-h-screen w-full flex-col w-full md:max-w-3xl lg:max-w-5xl mx-auto bg-gradient-to-l from-[#030712] to-[#162e6e] shadow-2xl overflow-hidden">
-
-        <!-- GLOW LAYER (Animated) -->
+<body class="antialiased">
+    <div class="titanium-box">
+        <!-- Faro Estetico -->
         <div class="glass-glow"></div>
 
-        <!-- Collapsible Search Bar -->
-        <div id="search-bar-container"
-            class="fixed top-16 left-0 right-0 mx-auto w-full md:max-w-3xl lg:max-w-5xl bg-[#0a0f1e]/20 backdrop-blur-md z-40 transition-all duration-500 -translate-y-full opacity-0 overflow-hidden border-b border-white/5 shadow-2xl">
-            <div class="p-4">
-                <div class="relative w-full">
-                    <span
-                        class="material-symbols-outlined absolute left-3 top-1/2 -translate-y-1/2 text-white/70 text-lg">search</span>
-                    <input id="deadline-search" type="text" placeholder="Cerca scadenze..."
-                        class="w-full h-11 pl-10 pr-4 bg-black/20 border border-white/5 rounded-xl text-sm focus:ring-2 focus:ring-primary transition-all text-white placeholder:text-white/40 outline-none">
-                </div>
-            </div>
-        </div>
-
-        <main class="titanium-main">
-            <!-- Header Spacer (OBLIGATORY) -->
-            <div class="h-16 w-full shrink-0"></div>
-
-            <!-- Sort Bar -->
-            <div class="px-4 py-3 flex items-center justify-between">
-                <div class="flex items-center gap-2">
-                    <span class="material-symbols-outlined text-primary text-sm">sort</span>
-                    <span class="text-[10px] font-black text-white/50 uppercase tracking-widest">Ordina:</span>
-                    <span id="deadline-count"
-                        class="bg-primary shadow-[0_0_10px_rgba(19,127,236,0.3)] text-white text-[10px] font-bold px-2 py-0.5 rounded-full min-w-[24px] text-center">0</span>
-                </div>
-                <select id="deadline-sort"
-                    class="bg-black/20 border border-white/10 rounded-lg text-[10px] font-bold text-white/80 focus:ring-0 py-1 px-3 h-7 appearance-none cursor-pointer">
-                    <option value="date-asc" class="bg-[#112240] text-white">Data (Più vicina)</option>
-                    <option value="date-desc" class="bg-[#112240] text-white">Data (Più lontana)</option>
-                    <option value="name-asc" class="bg-[#112240] text-white">Nome (A-Z)</option>
-                    <option value="name-desc" class="bg-[#112240] text-white">Nome (Z-A)</option>
-                </select>
-            </div>
-
-            <!-- Filter Chips (Stati) -->
-            <div class="flex justify-center gap-2 px-4 py-3 overflow-x-auto no-scrollbar shrink-0">
-                <button
-                    class="filter-chip active flex h-7 shrink-0 items-center justify-center px-2.5 rounded-lg bg-primary text-white shadow-lg shadow-primary/30 text-[10px] font-black uppercase tracking-wider transition-all">
-                    Tutte
-                </button>
-                <button
-                    class="filter-chip flex h-7 shrink-0 items-center justify-center px-2.5 rounded-lg bg-black/20 border border-white/5 text-white/50 text-[10px] font-bold uppercase tracking-wider hover:bg-white/10 transition-all">
-                    Urgenti
-                </button>
-                <button
-                    class="filter-chip flex h-7 shrink-0 items-center justify-center px-2.5 rounded-lg bg-black/20 border border-white/5 text-white/50 text-[10px] font-bold uppercase tracking-wider hover:bg-white/10 transition-all">
-                    In scadenza
-                </button>
-                <button
-                    class="filter-chip flex h-7 shrink-0 items-center justify-center px-2.5 rounded-lg bg-black/20 border border-white/5 text-white/50 text-[10px] font-bold uppercase tracking-wider hover:bg-white/10 transition-all">
-                    Completate
-                </button>
-            </div>
-
-            <!-- List Content -->
-            <div id="scadenze-list" class="flex flex-col gap-4 px-4 pb-10">
-                <div class="text-center py-20">
-                    <div class="inline-block relative">
-                        <div class="size-12 border-4 border-white/5 border-t-primary rounded-full animate-spin">
-                        </div>
-                    </div>
-                    <p class="text-white/30 text-xs mt-4 font-medium tracking-widest uppercase">Analisi dati...</p>
-                </div>
-            </div>
-
-        </main>
-
-        <!-- Bottom Glass Frame (Fixed) -->
-        <div
-            class="fixed bottom-0 left-0 right-0 w-full md:max-w-3xl lg:max-w-5xl mx-auto h-12 pointer-events-none z-50 backdrop-blur-md bg-[#0a0f1e]/20 border-t border-white/5">
-        </div>
-
-        <!-- Header -->
-        <header
-            class="fixed top-0 left-0 right-0 mx-auto w-full md:max-w-3xl lg:max-w-5xl bg-[#0a0f1e]/20 backdrop-blur-sm border-b border-white/5 z-50 transition-colors">
-            <div class="flex items-center px-4 h-16">
-                <a href="home_page.html"
-                    class="flex items-center justify-center size-10 rounded-full hover:bg-white/10 transition-all text-white active:scale-90">
-                    <span class="material-symbols-outlined">arrow_back</span>
-                </a>
-                <h2 class="text-sm font-black flex-1 text-center text-white uppercase tracking-[0.3em] ml-2">Scadenze
-                </h2>
-                <div class="flex items-center gap-1">
-                    <button id="toggle-search"
-                        class="flex items-center justify-center size-10 rounded-full hover:bg-white/10 transition-all text-white active:scale-90">
-                        <span class="material-symbols-outlined">search</span>
+        <!-- HEADER FISSO -->
+        <header class="titanium-header">
+            <div class="header-balanced-container">
+                <!-- ZONA SINISTRA: Navigazione + Search (2 icone) -->
+                <div class="header-left">
+                    <a href="home_page.html" class="btn-icon-header">
+                        <span class="material-symbols-outlined">arrow_back</span>
+                    </a>
+                    <button id="toggle-search" class="btn-icon-header">
+                        <span class="material-symbols-outlined" id="search-icon">search</span>
                     </button>
-                    <a href="aggiungi_scadenza.html"
-                        class="flex items-center justify-center size-10 rounded-full hover:bg-white/10 transition-all text-white active:scale-90">
-                        <span class="material-symbols-outlined text-2xl">add</span>
+                </div>
+
+                <!-- ZONA CENTRO: Titolo con Wrap Intelligente -->
+                <div class="header-center">
+                    <h2 class="header-title" data-t="deadlines_title">
+                        SCADENZE
+                    </h2>
+                </div>
+
+                <!-- ZONA DESTRA: Add + Home (2 icone) -->
+                <div class="header-right">
+                    <a href="aggiungi_scadenza.html" class="btn-icon-header">
+                        <span class="material-symbols-outlined">add</span>
+                    </a>
+                    <a href="home_page.html" class="btn-icon-header">
+                        <span class="material-symbols-outlined">home</span>
                     </a>
                 </div>
             </div>
         </header>
 
+        <!-- Search Bar -->
+        <div id="search-bar-container">
+            <div class="search-input-wrapper">
+                <span class="material-symbols-outlined">search</span>
+                <input id="deadline-search" type="text" data-t-placeholder="search_deadlines_placeholder"
+                    placeholder="Cerca scadenze..." />
+            </div>
+        </div>
+
+        <main class="settings-container no-select">
+
+            <!-- Barra Ordinamento (Row Layout V3.0) -->
+            <div
+                style="display: flex !important; flex-direction: row !important; align-items: center !important; justify-content: space-between !important; width: 100%; padding: 0.5rem 1rem; border-bottom: 1px solid rgba(255,255,255,0.05); margin-bottom: 0.5rem; flex-wrap: nowrap !important;">
+
+                <!-- Sinistra: Conteggio -->
+                <div style="display: flex; align-items: center; gap: 0.5rem; flex-shrink: 0;">
+                    <span id="deadline-count"
+                        style="background: rgba(59, 130, 246, 0.2); color: var(--text-primary); font-size: 10px; font-weight: 900; padding: 2px 8px; border-radius: 20px; min-width: 24px; text-align: center;">0</span>
+                    <span data-t="deadlines_total"
+                        style="font-size: 10px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.1em; color: var(--text-primary); white-space: nowrap;">Scadenze
+                        Totali</span>
+                </div>
+
+                <!-- Destra: Ordinamento -->
+                <div class="titanium-dropdown"
+                    style="width: auto !important; margin-left: auto !important; flex-shrink: 0;">
+                    <div id="sort-trigger"
+                        style="display: flex; align-items: center; gap: 0.3rem; cursor: pointer; opacity: 0.8; white-space: nowrap;">
+                        <span class="material-symbols-outlined" style="font-size: 16px;">sort</span>
+                        <span id="current-sort" data-t="sort_date_near"
+                            style="font-size: 10px; font-weight: 900; text-transform: uppercase; letter-spacing: 0.1em;">DATA
+                            (VICINA)</span>
+                        <span class="material-symbols-outlined"
+                            style="font-size: 14px; opacity: 0.4;">expand_more</span>
+                    </div>
+                    <div id="sort-menu" class="titanium-dropdown-menu"
+                        style="right: 0; left: auto; transform-origin: top right; min-width: 140px;">
+                        <div class="titanium-dropdown-item active" data-t="sort_date_near" data-value="date-asc">DATA
+                            (VICINA)</div>
+                        <div class="titanium-dropdown-item" data-t="sort_date_far" data-value="date-desc">DATA (LONTANA)
+                        </div>
+                        <div class="titanium-dropdown-item" data-t="sort_name_az" data-value="name-asc">NOME (A-Z)</div>
+                        <div class="titanium-dropdown-item" data-t="sort_name_za" data-value="name-desc">NOME (Z-A)
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Filter Chips -->
+            <div class="filter-container">
+                <button class="filter-chip active" data-t="filter_all">Tutte</button>
+                <button class="filter-chip" data-t="filter_urgent">Urgenti</button>
+                <button class="filter-chip" data-t="filter_expiring">In scadenza</button>
+                <button class="filter-chip" data-t="filter_completed">Completate</button>
+            </div>
+
+            <!-- List Content -->
+            <div id="scadenze-list" class="settings-group" style="padding-bottom: 80px;">
+                <!-- Loading State -->
+                <div class="flex flex-col items-center justify-center py-20 opacity-30">
+                    <div class="size-10 border-2 border-white/5 border-t-blue-500 rounded-full animate-spin"></div>
+                    <p class="text-[9px] font-black uppercase tracking-[0.3em] mt-4" data-t="analyzing_data">Analisi
+                        dati...</p>
+                </div>
+            </div>
+
+        </main>
+
+        <!-- FOOTER PREMIUM -->
+        <footer class="titanium-footer">
+            <div style="opacity: 0.3; text-align: center;">
+                <span
+                    style="font-size: 8px; font-weight: 800; letter-spacing: 0.3em; color: white; text-transform: uppercase;">
+                    Titanium Security Protocol V3.5
+                </span>
+            </div>
+        </footer>
     </div>
 
-    <script src="assets/js/scadenze.js" type="module"></script>
+    <!-- Scripts -->
+    <script src="assets/js/scadenze.js?v=3.5" type="module"></script>
 </body>
 
 </html>
